--- a/playground.ipynb
+++ b/playground.ipynb
@@ -23,13 +23,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a,c=AssignmentSubmissionMark.objects.get_or_create(\n",
-    "    assignment_submission_id='4793b584b4d14c66b974475b568088a4'\n",
+    "a,c=ExamSubmissionMark.objects.get_or_create(\n",
+    "    exam_submission_id='e0f499602d1744e8b91b8df800fdd0d6'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mark"
    ]
   },
   {
