detached country from phone

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "<QuerySet [<RoomUser: RoomUser object (0bf7a293d4df41a0bc84996a260e26c8)>, <RoomUser: RoomUser object (6cc05f82892e4325af1fb980e7990c97)>]>"
+       "<QuerySet [<User: yeamin21@outlook.com>]>"
       ]
      },
      "execution_count": 3,
@@ -37,7 +37,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "User.objects.filter(phone='01954492600')"
+   ]
   },
   {
    "cell_type": "code",
@@ -78,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
